se agrega cambio a actualizarDatos.html

--- a/actualizarDato.html
+++ b/actualizarDato.html
@@ -93,11 +93,11 @@
                                             <input type="text" name="textContrasena" class="form-control">
                                         </div>
                                         <div class="form-group">
-                                            <label>Telefono</label>
+                                            <label>Celular</label>
                                             <input type="text" name="textContrasena" class="form-control">
                                         </div>
                                         <div class="form-group">
-                                            <label>Seleccione Genero</label>
+                                            <label>Genero</label>
                                             <select  class="form-control" id="genero" name="textFkGenero" required>
                                                 <option value="...">...</option>
                                                 <option value="Hombre">Hombre</option>
